--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ find_package(MKL)
 add_executable(dummy main.cpp linalg.cc)
 target_link_libraries(dummy Eigen3::Eigen)
 if(MKL_FOUND)
-  target_compile_definitions(dummy EIGEN_USE_MKL_ALL)
+  target_compile_definitions(dummy PUBLIC EIGEN_USE_MKL_ALL)
   target_link_libraries(dummy MKL::MKL)
 endif()
